Cleanup dev/production environment